--- a/client/src/WebApp/components/UserPrompt/UserPrompt.css
+++ b/client/src/WebApp/components/UserPrompt/UserPrompt.css
@@ -17,6 +17,7 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
     flex-shrink: 0;
+    object-fit: cover;
 }
 
 .user-prompt .fake-img{
